--- a/wp-content/themes/_wp-manurios/style-editor.css
+++ b/wp-content/themes/_wp-manurios/style-editor.css
@@ -268,6 +268,9 @@ Underscores and Varia are distributed under the terms of the GNU GPL v2 or later
   .\!bottom-0 {
     bottom: calc(var(--spacing) * 0) !important;
   }
+  .bottom-4 {
+    bottom: calc(var(--spacing) * 4);
+  }
   .bottom-6 {
     bottom: calc(var(--spacing) * 6);
   }
@@ -445,6 +448,9 @@ Underscores and Varia are distributed under the terms of the GNU GPL v2 or later
   .h-full {
     height: 100%;
   }
+  .min-h-\[50vh\] {
+    min-height: 50vh;
+  }
   .min-h-\[600px\] {
     min-height: 600px;
   }
@@ -496,8 +502,15 @@ Underscores and Varia are distributed under the terms of the GNU GPL v2 or later
   .flex-shrink-0 {
     flex-shrink: 0;
   }
+  .flex-grow {
+    flex-grow: 1;
+  }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-24 {
+    --tw-translate-y: calc(var(--spacing) * -24);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .transform {
@@ -709,6 +722,9 @@ Underscores and Varia are distributed under the terms of the GNU GPL v2 or later
   }
   .pb-6 {
     padding-bottom: calc(var(--spacing) * 6);
+  }
+  .pb-40 {
+    padding-bottom: calc(var(--spacing) * 40);
   }
   .text-center {
     text-align: center;
@@ -1265,6 +1281,11 @@ Underscores and Varia are distributed under the terms of the GNU GPL v2 or later
   .lg\:pb-8 {
     @media (width >= 64rem) {
       padding-bottom: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:pb-60 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 60);
     }
   }
   .lg\:text-2xl {
